<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:scrollbars="none">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/img_backdrop"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/backdrop_image"
                        android:scaleType="centerCrop"
                        tools:src="@drawable/backdrop" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/white_gradient"
                        tools:ignore="ContentDescription" />

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        android:orientation="horizontal"
                        android:paddingHorizontal="32dp"
                        android:paddingTop="56dp"
                        android:paddingBottom="36dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="120dp"
                            android:layout_height="180dp"
                            android:background="@color/blue_1"
                            app:cardCornerRadius="8dp"
                            app:cardElevation="4dp"
                            app:cardMaxElevation="4dp"
                            app:layout_constraintTop_toTopOf="parent">

                            <ProgressBar
                                android:id="@+id/pb_poster"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:indeterminateTint="@color/gold_2"
                                android:padding="24dp" />

                            <ImageView
                                android:id="@+id/img_broken"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:contentDescription="@string/broken_image"
                                android:padding="24dp"
                                android:src="@drawable/ic_broken"
                                android:visibility="gone"
                                app:tint="@color/gold_2" />

                            <ImageView
                                android:id="@+id/img_poster"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:contentDescription="@string/poster_image"
                                android:scaleType="centerCrop"
                                tools:src="@drawable/poster" />

                        </androidx.cardview.widget.CardView>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginStart="16dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:fontFamily="@font/os_bold"
                                android:textColor="@color/blue_1"
                                android:textSize="20sp"
                                tools:text="@string/sample_title" />

                            <TextView
                                android:id="@+id/tv_genre"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:fontFamily="@font/os_regular"
                                android:textColor="@color/blue_1"
                                android:textSize="14sp"
                                tools:text="@string/sample_genres" />

                            <RatingBar
                                android:id="@+id/rating"
                                style="?android:attr/ratingBarStyleSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:max="5"
                                android:numStars="5"
                                android:theme="@style/MyRatingBar"
                                tools:rating="3.5" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="32dp"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:paddingHorizontal="25dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/os_bold"
                                android:gravity="center"
                                android:text="@string/language"
                                android:textAllCaps="true"
                                android:textColor="@color/blue_1"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/tv_language"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:fontFamily="@font/os_regular"
                                android:gravity="center"
                                android:textColor="@color/blue_1"
                                android:textSize="14sp"
                                tools:text="@string/sample_language" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/os_bold"
                                android:gravity="center"
                                android:text="@string/release_date"
                                android:textAllCaps="true"
                                android:textColor="@color/blue_1"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/tv_release_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:fontFamily="@font/os_regular"
                                android:gravity="center"
                                android:textColor="@color/blue_1"
                                android:textSize="14sp"
                                tools:text="@string/sample_release_date" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/os_bold"
                                android:gravity="center"
                                android:text="@string/runtime"
                                android:textAllCaps="true"
                                android:textColor="@color/blue_1"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/tv_runtime"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:fontFamily="@font/os_regular"
                                android:gravity="center"
                                android:textColor="@color/blue_1"
                                android:textSize="14sp"
                                tools:text="@string/sample_runtime" />

                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/os_bold"
                        android:gravity="center"
                        android:paddingHorizontal="36dp"
                        android:text="@string/overview"
                        android:textAllCaps="true"
                        android:textColor="@color/blue_1"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="120dp"
                        android:fontFamily="@font/os_regular"
                        android:gravity="center"
                        android:paddingHorizontal="32dp"
                        android:textColor="@color/blue_1"
                        android:textSize="14sp"
                        tools:text="@string/sample_overview" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/white_gradient_2"
                tools:ignore="ContentDescription" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/os_bold"
                android:paddingHorizontal="24dp"
                android:text="@string/add_to_favorites"
                android:textSize="12sp"
                app:cornerRadius="16dp" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/pb_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/blue_1"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/view_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/os_regular"
        android:gravity="center"
        android:text="@string/no_data"
        android:textColor="@color/blue_1"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>